update index and load images

--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <style>
+        .chef {
+          text-align: center;
+        }
+      </style>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/pizza.html">Pizza</a>
-    <a href="recipes/buttered-noodles.html">Buttered Noodles</a>
-    <a href="recipes/basic-burger.html">The Perfect Clasic Burger</a>
+    <h1 style="text-align: center;">Odin Recipes</h1>
+    <div class="chef">
+        <img src="images/chef.jpg" style="width: 800px; height: 450px;"  alt="chef">
+    </div>
+    <h3 style="text-align: center;">The best recipes to savor every day</h3>
+    <div style="text-align: center;">
+        <a href="recipes/pizza.html">Pizza</a><br>
+        <a href="recipes/buttered-noodles.html">Buttered Noodles</a><br>
+        <a href="recipes/basic-burger.html">The Perfect Clasic Burger</a>
+    </div>
 </body>
 </html>
