--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -1,9 +1,11 @@
-<h1>Pizza</h1>
-<img src="https://static.eldiario.es/clip/512ea43a-99c2-42a9-b73b-645e448a7c0f_16-9-discover-aspect-ratio_default_0.jpg" alt="pizza">
+<main>
+    <h1>Pizza</h1>
+<img src="../images/pizza.jpg" style="width: 800px; height: 450px;" alt="pizza">
 <h3>Description</h2>
 <p>Quick and easy vegetable pizza recipe that is great for parties and showers. You can use any combination of chopped veggies and cheeses — whatever your family likes!</p>
-<h3>Ingredients</h3>
-<ul>
+<div>
+    <h3>Ingredients</h3>
+    <ul>
     <li>2 (8 ounce) packages refrigerated crescent rolls</li>
     <li>2 (8 ounce) packages cream cheese, softened</li>
     <li>1 cup mayonnaise</li>
@@ -14,9 +16,11 @@
     <li>1 cup chopped cauliflower</li>
     <li>1 cup shredded carrots</li>
     <li>1 cup shredded Cheddar cheese</li>
-</ul>
-<h3>Steps</h3>
-<ol>
+    </ul>
+</div>
+<div>
+    <h3>Steps</h3>
+    <ol>
     <li>Gather all ingredients.</li>
     <li>Preheat the oven to 375 degrees F (190 degrees C)</li>
     <li>Roll out crescent roll dough onto a 9x13-inch baking sheet, and pinch together edges to form the pizza crust.</li>
@@ -24,4 +28,7 @@
     <li>Combine cream cheese, mayonnaise, and dry Ranch dressing mix in a small mixing bowl. Spread the mixture over the cooled crust.</li>
     <li>Arrange broccoli, tomatoes, bell pepper, cauliflower, shredded carrots, and Cheddar cheese over the cream cheese layer.</li>
     <li>Chill for 1 hour, slice, and serve.</li>
-</ol>
+    </ol>
+</div>
+<a href="../index.html">Return to Home</a>
+</main>
